# aeson-schema

./: .ghci  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  README.md  aeson-schema.cabal  generate-aeson-schema.hs  shell.nix  stack-lts-11.yaml  stack-lts-7.yaml  stack.yaml
.github/workflows/: stack-ci.yaml
examples/: schema.json
src/: aeson-schema-generate.hs
src/Data/Aeson/: Schema.hs
src/Data/Aeson/Schema/: Choice.hs  CodeGen.hs  CodeGenM.hs  Helpers.hs  Types.hs  Validator.hs
src/Data/Aeson/Schema/Choice/: TH.hs
src/Data/Aeson/TH/: Lift.hs
test/: TestSuite.hs
test/Data/Aeson/: LitQQ.hs
test/Data/Aeson/Schema/: Examples.hs  Tests.hs
test/Data/Aeson/Schema/Choice/: Tests.hs
test/Data/Aeson/Schema/CodeGen/: Tests.hs
test/Data/Aeson/Schema/Types/: Tests.hs
test/Data/Aeson/Schema/Validator/: Tests.hs
test/TestSuite/: Types.hs
