name:                aeson-schema
version:             0.1.0.0
synopsis:            Haskell JSON schema validator and parser generator
-- description:         
homepage:            https://github.com/timjb/aeson-schema
license:             MIT
license-file:        LICENSE
author:              Tim Baumann <tim@timbaumann.info>
maintainer:          Tim Baumann <tim@timbaumann.info>
category:            Data
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/timjb/haskell-aeson-schema.git

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Aeson.Schema, Data.Aeson.Schema.Validator, Data.Aeson.Schema.CodeGen, Data.Aeson.Schema.Choice, Data.Aeson.Schema.Helpers, Data.Aeson.Schema.Types
  other-modules:       Data.Aeson.Schema.Choice.TH, Data.Aeson.TH.Lift
  extensions:          OverloadedStrings
  build-depends:       base == 4.5.*,
                       aeson >= 0.6.0.2,
                       vector >= 0.7.1,
                       text >= 0.11.1.0,
                       regex-pcre >= 0.94.4,
                       unordered-containers >= 0.1.3.0,
                       containers,
                       attoparsec >= 0.8.6.1,
                       template-haskell,
                       th-lift >= 0.5.5 && < 0.6,
                       mtl >= 2 && < 3,
                       transformers >= 0.3.0.0,
                       QuickCheck >= 2.4.2 && < 2.5,
                       syb >= 0.3.6.1,
                       bytestring

executable generate-aeson-schema
  ghc-options:         -Wall
  main-is:             generate-aeson-schema.hs
  hs-source-dirs:      .
  build-depends:       base == 4.5.*,
                       aeson-schema,
                       cmdargs,
                       containers,
                       text,
                       aeson,
                       template-haskell,
                       attoparsec,
                       bytestring

test-suite tests
  ghc-options:         -Wall
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             TestSuite.hs
  extensions:          OverloadedStrings
  build-depends:       base == 4.5.*,
                       aeson,
                       text,
                       vector,
                       containers,
                       hashable,
                       unordered-containers,
                       aeson-schema,
                       attoparsec,
                       template-haskell,
                       test-framework >= 0.6 && < 0.7,
                       test-framework-hunit >= 0.2.7,
                       HUnit >= 1.2.4.3,
                       test-framework-quickcheck2 >= 0.2.12.2 && < 0.3,
                       QuickCheck >= 2.4.2 && < 2.5,
                       bytestring,
                       hint,
                       temporary,
                       mtl