name:                aeson-schema
version:             0.4.1.1
synopsis:            Haskell JSON schema validator and parser generator
description:         This library provides validation of JSON values against schemata. Given a schema, it can also produce data types corresponding to the schema and a parser.
homepage:            https://github.com/Fuuzetsu/aeson-schema
license:             MIT
license-file:        LICENSE
author:              Tim Baumann, Mateusz Kowalczyk
maintainer:          Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>
copyright:           (c) 2012-2015 Tim Baumann
                     (c) 2015-2016 Mateusz Kowalczyk
category:            Data
build-type:          Simple
cabal-version:       >= 1.8
tested-with:         GHC==7.8.4, GHC==7.10.2
extra-source-files:  CHANGELOG.md
data-files:          test/test-suite/tests/draft3/optional/*.json,
                     test/test-suite/tests/draft3/*.json
                     examples/schema.json

source-repository head
  type:                git
  location:            git://github.com/Fuuzetsu/aeson-schema.git

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Aeson.Schema, Data.Aeson.Schema.Validator,
                       Data.Aeson.Schema.CodeGenM,
                       Data.Aeson.Schema.CodeGen,
                       Data.Aeson.Schema.Choice,
                       Data.Aeson.Schema.Helpers,
                       Data.Aeson.Schema.Types
  other-modules:       Data.Aeson.Schema.Choice.TH,
                       Data.Aeson.TH.Lift
  extensions:          OverloadedStrings
  build-depends:       base > 4 && < 5,
                       aeson >= 0.11.0.0 && < 0.12,
                       vector >= 0.10 && < 0.12,
                       text >= 1.2 && < 1.3,
                       regex-pcre >= 0.94.4 && < 0.95,
                       unordered-containers >= 0.2.5.1 && < 2.6,
                       containers >= 0.5.0.0 && < 0.6,
                       attoparsec >= 0.12.1.2 && < 0.14,
                       template-haskell,
                       th-lift >= 0.7 && < 0.8,
                       mtl >= 2 && < 3,
                       transformers >= 0.3.0.0 && < 0.6,
                       QuickCheck >= 2.4.2 && < 2.9,
                       syb >= 0.4.4 && < 0.7,
                       bytestring >= 0.9.2.1 && < 0.11,
                       scientific >= 0.3.3.7 && < 0.4,
                       ghc-prim,
                       regex-compat,
                       regex-base

test-suite tests
  ghc-options:         -Wall
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             TestSuite.hs
  other-modules:       TestSuite.Types,
                       Data.Aeson.LitQQ,
                       Data.Aeson.Schema.Examples,
                       Data.Aeson.Schema.Choice.Tests,
                       Data.Aeson.Schema.CodeGen.Tests,
                       Data.Aeson.Schema.Types.Tests,
                       Data.Aeson.Schema.Validator.Tests
  extensions:          OverloadedStrings
  build-depends:       base,
                       aeson,
                       text,
                       vector,
                       containers,
                       hashable,
                       unordered-containers,
                       aeson-schema,
                       attoparsec,
                       scientific,
                       template-haskell,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       test-framework-quickcheck2,
                       QuickCheck,
                       bytestring,
                       hint,
                       temporary,
                       mtl,
                       filepath,
                       directory,
                       regex-compat
